Modif Collapse  arrows conditional display, Collapse translate effect fixed

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -12,6 +12,7 @@
     &__background {
         display: flex;
         position: relative;
+        width: 100%;
         height: 111px;
         border-radius: 10px;
 
@@ -57,6 +58,7 @@
     &__title {
         position: absolute;
         display: flex;
+        gap: 5px;
         flex-wrap: wrap;
         left: 0;
         top: 50%;
@@ -67,11 +69,13 @@
         font-size: 24px;
         font-weight: 500 !important;
         text-align: left;
+        line-height: 22px;
         z-index: 1;
 
         @media screen and (min-width: 768px) {
             width: 100%;
             font-size: 48px;
+            line-height: 48px;
             justify-content: center;
             padding-left: 0px;
             gap: 8px;
@@ -83,7 +87,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // margin: 63px 100px 0px 100px;
     margin: 16px 20px 0px 20px;
 
     &__background {
