--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -23,10 +23,6 @@
         }
     }
 
-    .hidden {
-        display: none;
-    }
-
     &__box {
         display: flex;
         justify-content: space-between;
